// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`theme styles adjusts top and bottom padding to passed props 1`] = `
.c0 {
  width: 100%;
  padding: 0 1.5em;
}

@media (min-width:75em) {
  .c0 {
    max-width: 75em;
    padding: unset;
  }
}

<div
  class="c0"
>
  Nord
</div>
`;

exports[`theme styles has top and bottom padding 1`] = `
.c0 {
  width: 100%;
  padding: 0 1.5em;
  padding-top: 2.5em;
  padding-bottom: 2.5em;
}

@media (min-width:75em) {
  .c0 {
    max-width: 75em;
    padding: unset;
  }
}

@media (min-width:56.25em) {
  .c0 {
    padding-top: 5em;
    padding-bottom: 5em;
  }
}

<div
  class="c0"
>
  Nord
</div>
`;
